Fixed missing Hamburger icon on iOS???
Former-commit-id: 105fe5891d61922e6471be8c9c5892582f84d37b

--- a/modules/ssg/front_end/themes/core/headerbar.css
+++ b/modules/ssg/front_end/themes/core/headerbar.css
@@ -42,8 +42,8 @@ header::after {
 #button-navigation,
 #button-previous,
 #button-next {
-	width: 33px;
-	height: 33px;
+	width: 32px;
+	height: 32px;
 	text-align:center;
 	vertical-align:middle;
 	appearance:none;
@@ -59,8 +59,8 @@ header::after {
 #button-navigation {
 	background-image: url("/resources/svg/hamburger.svg");
 	background-repeat: no-repeat;
-	background-clip: content-box;
-	background-size: 100%;
+	background-size: 100% 100%;
+	width:48px;
 }
 
 #button-settings::after { content: "\e994"; }
@@ -165,15 +165,13 @@ header h3 {
 
 	#button-navigation {
 		position: absolute;
-		width: 44px;
-		height: 44px;
+		width: 32px;
+		height: 32px;
 		left: 50%;
 		top: 50%;
 		transition-property: 50%;
-		margin-top: -22px;
-		margin-left: -22px;
-		font-size: 2.1em;
-		line-height: 42px;
+		margin-top: -16px;
+		margin-left: -16px;
 	}
 
 	#header-center > a {
